--- a/public-CV.tex
+++ b/public-CV.tex
@@ -16,8 +16,8 @@
 \begin{document}
 \name{\Large Camille Scott}
 \address{{\bf Permanent Address}\\
-Request Only\\
-Davis, CA 95618}
+By Request\\
+Davis, CA}
 \address{
 \hfill {\bf Contact}\\
 \hfill camille.scott.w@gmail.com\\
@@ -31,7 +31,7 @@ Davis, CA 95618}
 
     %____________________________________________________________________________________
 
-\section{\small \it{(as of March 2018)}}
+\section{\small \it{(as of July 2020)}}
 
     % Education
     \section{\mysidestyle Education}
@@ -66,10 +66,13 @@ USDA / MSU/  National Needs Fellow \hfill 2013-2015\\
 
 \section{\mysidestyle Manuscripts}
 
-Scott, C. (2017). {\em shmlast: An improved implementation of Conditional Reciprocal Best Hits with LAST and Python}. The Journal of Open Source Software, 2017.
+Reiter, T., Brooks, P. T., Irber, L., Joslin, S. E., Reid, C. M., Scott, C., ... \& Pierce, N. T. (2020). {\em Streamlining Data-Intensive Biology With Workflow Systems.}. BioRxiv.
 
-Ren, J., Chung-Davidson, Y. W., Yeh, C. Y., Scott, C., Brown, T., \& Li, W. (2015). 
-{\em Genome-wide analysis of the ATP-binding cassette (ABC) transporter gene family in sea lamprey and Japanese lamprey.} BMC genomics, 16(1), 436.
+Neches, R. Y., \& Scott, C. (2018). {\em SuchTree: Fast, thread-safe computations with phylogenetic trees.} Journal of Open Source Software, 3(26), 678.
+
+Scott, C. (2017). {\em shmlast: An improved implementation of Conditional Reciprocal Best Hits with LAST and Python.} The Journal of Open Source Software, 2017.
+
+Ren, J., Chung-Davidson, Y. W., Yeh, C. Y., Scott, C., Brown, T., \& Li, W. (2015). {\em Genome-wide analysis of the ATP-binding cassette (ABC) transporter gene family in sea lamprey and Japanese lamprey.} BMC genomics, 16(1), 436.
 
 Crusoe, M. R. et. al. (2015). {\em The khmer software package: enabling efficient nucleotide sequence analysis.} F1000Research, 4.
 
@@ -78,11 +81,13 @@ Aleksic, J., Alexa, A., Attwood, T. K., Hong, N. C., Dahlö, M., Davey, R., ...,
 
 \section{\mysidestyle Blogs and social media}
 
-Professional blog at: \href{http://camillescott.github.io/blog/}{camillescott.github.io/blog}  
+Professional blog at: \href{http://camillescott.org}{camillescott.org}  
 
 Twitter: \href{http://twitter.com/camille\_codon}{@camille\_codon}
 
 Github: \href{https://github.com/camillescott}{github.com/camillescott}
+
+\pagebreak
 
    %____________________________________________________________________________________
     \section{\mysidestyle Professional\\Activities}
