--- a/public-CV.tex
+++ b/public-CV.tex
@@ -46,7 +46,7 @@ Davis, CA}
 
 \vspace{1mm}
 
-{\bf University of California Davis}, Davis, CA \hfill 2015-present\\
+{\bf University of California Davis}, Davis, CA \hfill 2015-2022\\
 {\em DIB Lab, PhD. student, Computer Science}
 
 \vspace{2mm}
@@ -57,8 +57,8 @@ Davis, CA}
 
 National Merit Finalist \hfill 2008\\
 Alma College / Distinguished Scholar Award \hfill 2008-2012\\
-Binghamton University / Research Experience for Undergrads \hfill summer 2011\\
-USDA / MSU/  National Needs Fellow \hfill 2013-2015\\
+Binghamton University / Research Experience for Undergrads \hfill 2011\\
+USDA / MSU /  National Needs Fellow \hfill 2013-2015\\
 
     %____________________________________________________________________________________
     % Publications
@@ -127,7 +127,15 @@ Github: \href{https://github.com/camillescott}{github.com/camillescott}
 {\em k-mer counting, graph traversal, and sequence processing}\\
 \hfill \href{https://github.com/ged-lab/khmer/}{github.com/dib-lab/khmer}\\
 
-\item[] Author and maintainer of the {\bf dammit} annotator,\\
+\item[] Author and maintainer of {\bf goetia},\\
+    {\em C++ and Python library and command line tools for streaming sequence analysis}\\
+\hfill \href{https://github.com/camillescott/goetia}{github.com/camillescott/goetia}\\
+
+\item[] Author and maintainer of {\bf debruijnal-enhance-o-tron},\\
+{\em pytest fixtures for random de Bruijn graph generation}\\
+\hfill \href{https://github.com/camillescott/debruijnal-enhance-o-tron}{github.com/camillescott/debruijnal-enhance-o-tron}\\
+
+\item[] Author and maintainer of {\bf dammit},\\
 {\em a tool for easy de novo transcriptome annotation}\\
 \hfill \href{https://github.com/camillescott/dammit}{github.com/camillescott/dammit}\\
 
