Dissertation / grad info, some other professional activities, formatting:

--- a/public-CV.tex
+++ b/public-CV.tex
@@ -31,7 +31,7 @@ Davis, CA}
 
     %____________________________________________________________________________________
 
-\section{\small \it{(as of July 2020)}}
+\section{\small \it{(as of May 2022)}}
 
     % Education
     \section{\mysidestyle Education}
@@ -42,18 +42,20 @@ Davis, CA}
 \vspace{1mm}
 
 {\bf Michigan State University}, East Lansing, MI \hfill 2012-2015\\
-{\em DIB Lab, PhD. student, Computer Science}
+{\em GED Lab, PhD. student, Computer Science}
 
 \vspace{1mm}
 
 {\bf University of California Davis}, Davis, CA \hfill 2015-2022\\
-{\em DIB Lab, PhD. student, Computer Science}
+{\em PhD., Computer Science, Lab for Data Intensive Biology}\\
+{\em Dissertation: \href{https://github.com/camillescott/dissertation}{Streaming Methods for
+    Assembly Graph Analysis}}
 
 \vspace{2mm}
 
     %____________________________________________________________________________________
     % Honours and Awards
-    \section{\mysidestyle Honours and\\Awards} 
+    \section{\mysidestyle Honors and\\Awards} 
 
 National Merit Finalist \hfill 2008\\
 Alma College / Distinguished Scholar Award \hfill 2008-2012\\
@@ -65,6 +67,8 @@ USDA / MSU /  National Needs Fellow \hfill 2013-2015\\
 
 
 \section{\mysidestyle Manuscripts}
+
+Scott, C., \& Brown, C. T. (2022). {\em Streaming Construction of the Compact de Bruijn Graph}. In prep.
 
 Reiter, T., Brooks, P. T., Irber, L., Joslin, S. E., Reid, C. M., Scott, C., ... \& Pierce, N. T. (2020). {\em Streamlining Data-Intensive Biology With Workflow Systems.}. BioRxiv.
 
@@ -79,15 +83,16 @@ Crusoe, M. R. et. al. (2015). {\em The khmer software package: enabling efficien
 Aleksic, J., Alexa, A., Attwood, T. K., Hong, N. C., Dahlö, M., Davey, R., ..., \& Lahti, L. (2014)
 {\em The open science peer review oath.} F1000Research, 3.
 
+\pagebreak
+
 \section{\mysidestyle Blogs and social media}
 
-Professional blog at: \href{http://camillescott.org}{camillescott.org}  
+Blog: \href{http://camillescott.org}{camillescott.org}  
 
 Twitter: \href{http://twitter.com/camille\_codon}{@camille\_codon}
 
-Github: \href{https://github.com/camillescott}{github.com/camillescott}
+GitHub: \href{https://github.com/camillescott}{github.com/camillescott}
 
-\pagebreak
 
    %____________________________________________________________________________________
     \section{\mysidestyle Professional\\Activities}
@@ -119,6 +124,21 @@ Github: \href{https://github.com/camillescott}{github.com/camillescott}
 \item[] Participant in Workshop at {\bf University of California Davis},\\
 {\em Software Carpentry ``Train the Trainers" } \hfill 01/2015\\
 
+\item[] Lead Instructor for workshop at {\bf UC Davis},\\
+{\em \href{https://angus.readthedocs.io/en/2017/}{ANGUS: Next-Gen Sequence Analysis Workshop}} \hfill Summer 2017\\
+
+\item[] TA at {\bf UC Davis},\\
+{\em ECS132: Probabilistic and Statistical Modeling in Computer Science} \hfill Spring 2021\\
+
+\end{list1}
+
+\pagebreak
+
+   %____________________________________________________________________________________
+    \section{\mysidestyle Software}
+
+\begin{list1}
+
 \item[] Contributor to {\bf khmer Protocols Project},\\
 {\em Protocols for cloud-based de novo RNA-seq and metagenomic analyses}\\
 \hfill \href{https://khmer-protocols.readthedocs.org/}{khmer-protocols.readthedocs.org}\\
@@ -127,8 +147,12 @@ Github: \href{https://github.com/camillescott}{github.com/camillescott}
 {\em k-mer counting, graph traversal, and sequence processing}\\
 \hfill \href{https://github.com/ged-lab/khmer/}{github.com/dib-lab/khmer}\\
 
+\item[] Member of and contributor to {\bf bioconda channel},\\
+{\em conda channel for bioinformatics packages for Linux and MacOS}\\
+\hfill \href{https://github.com/bioconda/bioconda-recipes}{github.com/bioconda/bioconda-recipes}\\
+
 \item[] Author and maintainer of {\bf goetia},\\
-    {\em C++ and Python library and command line tools for streaming sequence analysis}\\
+{\em C++ and Python library and command line tools for streaming sequence analysis}\\
 \hfill \href{https://github.com/camillescott/goetia}{github.com/camillescott/goetia}\\
 
 \item[] Author and maintainer of {\bf debruijnal-enhance-o-tron},\\
